--- a/css/color-green.css
+++ b/css/color-green.css
@@ -1,78 +1,1 @@
-/*-----------------
-* [Master Stylesheet]
-*
-* Theme    : WillyWonka
-* Version  : 1.0
-* Author   : sujal
-* 
-------------------*/
-::-webkit-scrollbar{
-    width: 4px;
-    color:#04A777;
-}
-::-webkit-scrollbar-thumb {
-    background: #04A777; 
-    border-radius: 4px;
-    width: 4px;
-  }
-  #breaker{
-      background-color: #04A777;
-  }
-  .color{
-      color: #04A777;
-  }
-  #about-content a{
-      color:#04A777 ;
-  }
-  .cv a button{
-      background: #04A777;
-  }
-  .service-img img{
-    background: #04A777;
-    box-shadow:0px 0px 0px 0px #04A777 ;
-  }
-  .service:hover .service-img img{
-    box-shadow:0px 0px 0px 400px #04A777 ;
-}
-.html-progress{
-    background: #04A777;
-}
-.js-progress{
-    background: #04A777;
-}
-.adobe-progress{
-    background: #04A777;
-}
-.php-progress{
-    background: #04A777;
-}
-.jquery-progress{
-    background: #04A777;
-}
-.seo-progress{
-    background: #04A777;
-}
-.portfolio-text h2{
-    color: #04A777;
-}
-.portfolio-text button{
-    color: #04A777;
-    border: 1.5px solid #04A777;
-}
-.portfolio-text button::before{
-    background: #04A777;
-}
-.portfolio-image img::before{
-    background: #04A777;
-}
-.blog-date{
-    background: #04A777;
-}
-form button{
-    background: #04A777;
-}
-@media all and (max-width: 550px) and (min-width: 5px){
-    .service:hover .service-img img{
-        box-shadow:0px 0px 0px 0px #c70039 ;
-    }
-}
+.adobe-progress,.blog-date,.cv a button,.html-progress,.jquery-progress,.js-progress,.php-progress,.portfolio-image img::before,.portfolio-text button::before,.seo-progress,.service-img img,form button{background:#04a777}::-webkit-scrollbar{width:4px;color:#04a777}::-webkit-scrollbar-thumb{background:#04a777;border-radius:4px;width:4px}#breaker{background-color:#04a777}#about-content a,.color,.portfolio-text h2{color:#04a777}.service-img img{box-shadow:0 0 0 0 #04a777}.service:hover .service-img img{box-shadow:0 0 0 400px #04a777}.portfolio-text button{color:#04a777;border:1.5px solid #04a777}@media all and (max-width:550px) and (min-width:5px){.service:hover .service-img img{box-shadow:0 0 0 0 #c70039}}
